Various fixes/cleanup (#487)
* Various minor fixes:
- Add OIds in ThreadCreation
- Copy metadata from call statements into marker events when inlining.
- Fixed ExecutionModel printing warnings for ThreadArguments
- Renamed FunCall/FunRet to FunCallMarker/FunReturnMarker to distinguish them from proper call/return events.
- Made more internals of AbstractEvent private.

* Fixed ExecutionStatus to work with boolean registers.

* Removed unnecessary usages of ExecutionStatus.
Use boolean type register for ExecutionStatus whenever possible.

* Improved logging

* Changed ExecutionGraphVisualizer to also create nodes for threading-related events.
Increased weighting of po-edges

* Added handling of pthread_exit

* Changed heuristic to detect whether Smack created static initialization.
Avoid creating memory for procedure address constants.

* Refactoring.
RelationAnalysis now logs #Relations and #Axioms